@@ -36,6 +36,8 @@
 * Skip scanning virtual environments even when venv/bin/python is a dangling
   symlink.
 
+* Added pip completion support for fish shell.
+
 
 **8.1.2 (2016-05-10)**
 
